<resources>
    <string name="app_name">Whosfree</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="nonreg">Non sei registrato?</string>
    <string name="register">Registrati</string>
    <string name="title_activity_register" translatable="false">Register</string>
    <string name="confpass">Conferma Password</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="login" translatable="false">Login</string>
    <string name="title_activity_login">Accedi</string>

    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="title_activity_home" translatable="false">Home</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_update">Aggiorna</string>
    <string name="create_group">Crea gruppo</string>


    <string name="add_group">Aggiungi gruppo</string>
    <string name="group_name">Nome gruppo</string>

    <string name="member_name">Email membro</string>
    <string name="add_member">Aggiungi membro</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="accedi">Apri</string>


    <string name="nome_membro">Nome membro</string>
    <string name="mattina">Mattina</string>
    <string name="pranzo">Pranzo</string>
    <string name="pomeriggio">Pomeriggio</string>
    <string name="cena">Cena</string>
    <string name="sera">Sera</string>

    <string-array name="user_options">
        <item>V</item>
        <item>X</item>
        <item>U</item>
    </string-array>

</resources>
