<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.sky.whosfree.Member">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="NomeMembro" />

    <TextView
        android:id="@+id/Morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/member_name"
        android:text="@string/mattina" />

    <TextView
        android:id="@+id/Lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pranzo" />

    <TextView
        android:id="@+id/Afternoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="13dp"
        android:layout_toStartOf="@+id/Dinner"
        android:text="@string/pomeriggio" />

    <TextView
        android:id="@+id/Dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/Evening"
        android:text="@string/cena" />

    <TextView
        android:id="@+id/Evening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/sera" />

</RelativeLayout>
