<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sky.whosfree.ModifyTable">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/mattina" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/pranzo"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pomeriggio"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/spinner8"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cena"
        android:layout_above="@+id/textView23"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sera"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/action_update"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/colorText"/>

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView20"
        android:layout_toEndOf="@+id/textView21" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignStart="@+id/spinner7" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView22"
        android:layout_toEndOf="@+id/textView21" />

    <Spinner
        android:id="@+id/spinner9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView23"
        android:layout_alignStart="@+id/spinner8" />

</RelativeLayout>
